feat: Add post-ad redirect functionality
Introduces a new `postAdUrl` field for programs in `config.json` and updates the `Program` type. The `AdGateModal` now supports a redirect after the ad countdown, offering an additional user journey option and enhancing ad integration flexibility.

--- a/public/config.json
+++ b/public/config.json
@@ -19,7 +19,8 @@
           "longDescription": "Adobe Photoshop هو المعيار الصناعي في تحرير الرسومات النقطية. يتيح للمستخدمين إنشاء وتعديل الصور والأعمال الفنية الرقمية. يستخدم على نطاق واسع من قبل المصورين والمصممين ومحترفي الويب.",
           "image": "https://i.imgur.com/YQ5N1r1.png",
           "downloadUrl": "#",
-          "adUrl": "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          "adUrl": "https://www.youtube.com/watch?v=dQw4w9WgXcQ",
+          "postAdUrl": "https://sam-developer.com/support"
         },
         {
           "id": "prog2",
