feat: Add ad banner functionality
Introduce a persistent ad banner displayed at the bottom right of the screen.
The banner is dismissible and its state is managed via sessionStorage to prevent
repeated dismissals on the same session. Ad configuration is now managed via
`config.json` and the admin panel, allowing for dynamic ad content.

The ad banner is implemented using `framer-motion` for smooth animations,
and a new `Ad` interface and type have been added to `types.ts`. The admin
modal has been extended to support adding, editing, and deleting ads.

--- a/public/config.json
+++ b/public/config.json
@@ -7,6 +7,15 @@
     "username": "admin",
     "password": "123"
   },
+  "ads": [
+    {
+      "id": "ad1_171554_2584",
+      "name": "Support Sam Developer!",
+      "description": "If you like this website, consider supporting the developer to keep it running.",
+      "link": "https://sam-developer.com",
+      "image": "https://i.imgur.com/O1hP4Yx.png"
+    }
+  ],
   "categories": [
     {
       "id": "cat1",
