feat: Add site about and advertisement info
Adds new fields to the configuration for site description and advertisement details. Also introduces a new modal component for displaying this information and integrates it into the homepage. Updates types to reflect these additions.

--- a/public/config.json
+++ b/public/config.json
@@ -3,6 +3,8 @@
   "siteName": "SAM SOFT PROGRAM 2025",
   "siteLogo": "https://i.imgur.com/g4zB5cT.png",
   "developer": "Sam Developer",
+  "siteAbout": "موقع SAM SOFT PROGRAM هو وجهتكم الأولى لتحميل أحدث البرامج الكاملة والموثوقة. نسعى لتوفير تجربة سهلة وآمنة لجميع المستخدمين مع روابط مباشرة وسريعة.",
+  "advertiseInfo": "هل ترغب في عرض إعلانك على موقعنا والوصول إلى آلاف المستخدمين يومياً؟\n\nتواصل معنا عبر البريد الإلكتروني: contact@samsoft.com لمعرفة المزيد حول الباقات الإعلانية المتاحة والأسعار.\n\nنحن نقدم مساحات إعلانية متنوعة تناسب احتياجاتك.",
   "admin": {
     "username": "admin",
     "password": "123"
@@ -24,6 +26,7 @@
         {
           "id": "prog1",
           "name": "Adobe Photoshop 2025",
+          "badge": "جديد",
           "shortDescription": "برنامج لتحرير الصور ومعالجتها باحترافية.",
           "longDescription": "Adobe Photoshop هو المعيار الصناعي في تحرير الرسومات النقطية. يتيح للمستخدمين إنشاء وتعديل الصور والأعمال الفنية الرقمية. يستخدم على نطاق واسع من قبل المصورين والمصممين ومحترفي الويب.",
           "image": "https://i.imgur.com/YQ5N1r1.png",
