feat: Implement configuration loading from Gist
Introduces the ability to fetch website configuration from a Gist URL. This allows for dynamic updates to site content, name, and other settings without requiring code redeployments.

The `useConfig` hook is updated to prioritize fetching configuration from a Gist if a `gistRawUrl` is provided. It also includes improved error handling and caching mechanisms.

The `AdminModal` now guides users on how to set up a Gist and its raw URL in `public/config.json` to leverage this new dynamic configuration feature.

--- a/public/config.json
+++ b/public/config.json
@@ -1,5 +1,6 @@
 
 {
+  "gistRawUrl": "",
   "siteName": "SAM SOFT PROGRAM 2025",
   "siteLogo": "https://i.imgur.com/g4zB5cT.png",
   "developer": "Sam Developer",
